2003-06-10  William Jon McCann  <mccann@jhu.edu>

	* gnomine.c: HIG fixes for preferences dialog.  Moved
	flags status and clock to appbar.

2003-06-09  William Jon McCann  <mccann@jhu.edu>

	* gnomine.c: Removed separator from dialogs as in HIG.

2003-06-05  William Jon McCann  <mccann@jhu.edu>

	* Makefile.am (install-data-local): Only install schemas
	if they are requested.

2003-05-31  Callum McKenzie  <callum@physics.otago.ac.nz>

	* Makefile.am (install-data-local): Implement setgid modifications
	(see gnome-games/ChangeLog). Also undo the score directory
	changes. It breaks more than it fixes.	

2003-05-30  Callum McKenzie  <callum@physics.otago.ac.nz>

	* Makefile.am (scoredir): Changed score directory to fix bug
	#113968.

2003-05-28  Callum McKenzie  <callum@physics.otago.ac.nz>

	* gnomine.c: Use gtk_window_present for displaying dialogs.
	Fixes bug #113893, thanks to Steve Chaplin.

2003-05-21  Callum McKenzie  <callum@physics.otago.ac.nz>

	* gnomine.c (preferences_callback): Fixed code to make 
	translation easier, fixes bug #113395.

2003-05-18  Callum McKenzie  <callum@physics.otago.ac.nz>

	* Makefile.am (EXTRA_DIST): Fixups so make distcheck works.

2003-05-14  Callum McKenzie  <callum@physics.otago.ac.nz>

	* Makefile.am: Moved the icon into here from the gnome-desktop
	module.

2003-05-12  Callum McKenzie  <callum@physics.otago.ac.nz>

	* minefield.c (gtk_mine_draw): Added a dotted line to the
	background grid to increase contrast. Amusingly high-contrast was
	the worst case with the old line-style. See bug #97732. Thanks go
	to Feiyun Wang for suggesting the solution and to Jonathan
	Blandford who suggested using a stipple.
	(gtk_minefield_check_field): Applied the patch in bug #97524, a
	minor optimisation.

2003-05-07  Callum McKenzie  <callum@physics.otago.ac.nz>

	* gnomine.c (fix_nmines): Added code to ensure that the number of
	mines is never greater than the number of cells. Fixes bug #97229.
